--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
   <header>王彦霖 · 作品集 Portfolio 2025</header>
   <div class="viewer">
     <!-- 这里的文件名必须与你仓库里的 PDF 完全一致 -->
-    <iframe src="portfolio_2025.pdf#view=FitH"></iframe>
+    <iframe src="Portfolio_2025.pdf#view=FitH"></iframe>
   </div>
   <footer>
     若无法预览，可点击直接下载：
-    <a href="portfolio_2025.pdf" target="_blank" rel="noopener">下载作品集 PDF</a>
+    <a href="Portfolio_2025.pdf" target="_blank" rel="noopener">下载作品集 PDF</a>
   </footer>
 </body>
 </html>
